--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Attestation Checker</string>
     <string name="attest">Attest</string>
     <string name="notice">Note: The results will automatically be sent to an external server that will categorize and store them. Thank you for helping with my bachelor\'s thesis.</string>
+    <string name="results">Results</string>
 </resources>
