--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">Attestation Checker</string>
     <string name="attest">Attest</string>
-    <string name="notice">Note: The results will automatically be sent to an external server that will categorize and store them. Thank you for helping with my bachelor\'s thesis.</string>
-    <string name="results">Results</string>
+    <string name="notice">Note: The results of the key attestation will automatically be sent to an
+        external server that will categorize and store them. Thank you for helping with my bachelor\'s
+        thesis!</string>
+    <string name="results" />
+    <string name="lazyDevsOrError" />
 </resources>
